--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "lint:fix": "eslint --fix --ext .js,.ts --format=pretty ./src",
     "changelog": "gulp changelog",
     "version": "yarn changelog && git add CHANGELOG.md",
-    "release": "yarn test && yarn build && np --no-cleanup --yolo --any-branch"
+    "release": "yarn test && yarn build && np --no-cleanup --yolo --any-branch",
+    "markdown": "api-documenter markdown -i ./temp -o ./markdown"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.16",
+    "@microsoft/api-documenter": "^7.13.10",
     "@microsoft/api-extractor": "^7.13.1",
     "@types/fs-extra": "^9.0.7",
     "@types/gulp": "^4.0.8",
